Add base react app structure

--- a/src/root/styles/global.css
+++ b/src/root/styles/global.css
@@ -1,8 +1,19 @@
+html, body, #root {
+  height: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: system-ui;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background: var(--color-background);
+  color: var(--color-text);
 }
 
 code {
